// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/MediaPlayer Play Gif 1`] = `
<img
  alt=""
  class="makeStyles-image-5"
  src="file_example_GIF_small.gif"
/>
`;

exports[`Storyshots components/MediaPlayer Play Image 1`] = `
<img
  alt=""
  class="makeStyles-image-2"
  src="file_example_JPG_100kB.jpg"
/>
`;

exports[`Storyshots components/MediaPlayer Play Video 1`] = `
<video
  autoplay=""
  class="makeStyles-video-7"
  playsinline=""
  src="file_example_MP4_480_1_5MG.mp4"
  style="pointer-events: none;"
/>
`;

exports[`Storyshots organisms/MediaPlayer Play Gif 1`] = `
<img
  alt=""
  class="makeStyles-image-5"
  src="file_example_GIF_small.gif"
/>
`;

exports[`Storyshots organisms/MediaPlayer Play Image 1`] = `
<img
  alt=""
  class="makeStyles-image-2"
  src="file_example_JPG_100kB.jpg"
/>
`;

exports[`Storyshots organisms/MediaPlayer Play Video 1`] = `
<video
  autoplay=""
  class="makeStyles-video-7"
  playsinline=""
  src="file_example_MP4_480_1_5MG.mp4"
  style="pointer-events: none;"
/>
`;
